# GovtCabinetBidder

./: .gitignore  README.md
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 7081042367e0_create_labor_material_matches.py  7b78f728d2cd_create_bid_opportunities.py  b35dc65d779f_create_material_suppliers.py  f0a8f740f92d_initial_schema_setup.py  fac4ee6c6163_create_pricing_benchmarks.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/models/: __init__.py  bid_opportunity.py  enums.py  labor_material_match.py  labor_partner.py  material_supplier.py  mixins.py  pricing_benchmark.py
apps/api/app/schemas/: __init__.py  bid_opportunity.py
apps/api/tests/: test_config.py  test_health.py  test_models.py  test_schemas.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.node.json
apps/web/src/: App.tsx  main.tsx  styles.css
docs/: ENGINEERING_PRINCIPLES.md
