[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "government-cabinet-bid-agent-api"
version = "0.1.0"
description = "FastAPI backend for the government cabinet bid agent MVP."
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
]

[project.optional-dependencies]
dev = [
    "httpx==0.27.2",
    "pytest==8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
