[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "government-cabinet-bid-agent-api"
version = "0.1.0"
description = "FastAPI backend for the government cabinet bid agent MVP."
requires-python = ">=3.9"
dependencies = [
    "alembic==1.16.1",
    "fastapi==0.115.12",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.41",
    "psycopg[binary]==3.2.9",
    "uvicorn==0.34.2",
]

[project.optional-dependencies]
dev = [
    "httpx==0.27.2",
    "pytest==8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
